--- a/Week-3/PROJECT_2/Untitled.ipynb
+++ b/Week-3/PROJECT_2/Untitled.ipynb
@@ -2,13 +2,76 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d2b4b8e6",
+   "execution_count": 53,
+   "id": "5ab3ee9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Code to find the roots of a quadratic equation\n",
+      "Enter a: 4\n",
+      "Enter b: 5\n",
+      "Enter c: 6\n",
+      "Real and Different roots \n",
+      "2.181243040080456\n",
+      "-3.431243040080456\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Code to find the roots of a quadratic equation\")\n",
+    "a = int(input('Enter a: '))\n",
+    "b = int(input('Enter b: '))\n",
+    "c = int(input('Enter c: '))\n",
+    "\n",
+    "d_R = int((b * b - 4) * a * c)\n",
+    "sqrt_VAL = math.sqrt(abs(d_R))\n",
+    "\n",
+    "import math\n",
+    "def findRoots(a,b,c):\n",
+    "    \n",
+    "    print(int(d_R))\n",
+    "\n",
+    "if d_R > 0:\n",
+    "    print(\"Real and Different roots \")\n",
+    "    print((-b + sqrt_VAL)/ (2 * a))\n",
+    "    print((-b - sqrt_VAL)/ (2 * a))\n",
+    "            \n",
+    "elif d_R == 0:\n",
+    "    print(\"Real and Same roots \")\n",
+    "    print(-b/(2 * a))\n",
+    "\n",
+    "    \n",
+    "if a == 0:\n",
+    "    print(\"Unsolvable equation \")\n",
+    "                \n",
+    "    \n",
+    "                \n",
+    "        \n",
+    "                \n",
+    "                \n",
+    "        \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "46106ca2",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(\"Code to find the roots of a quadratic equation\")\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56d877b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
