--- a/Week-4/PROJECT-2/Untitled.ipynb
+++ b/Week-4/PROJECT-2/Untitled.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e118cf9",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +60,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df214c8e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -69,7 +67,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -83,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
