--- a/Week-4/Untitled.ipynb
+++ b/Week-4/Untitled.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88e9b767",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +15,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65863da6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +26,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc1f22c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +43,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f870a4f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +58,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f24c6e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2598d6df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +90,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00a369b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +106,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c45f50cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +129,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d89278a8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -145,7 +136,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38be23fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -153,7 +143,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0792e1bf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -161,7 +150,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -175,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
