--- a/Week-6/Untitled2.ipynb
+++ b/Week-6/Untitled2.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "07609882",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +192,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5c978249",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +307,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "06de0b87",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +445,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "eed5b17c",
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +551,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c8cf19db",
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +683,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f2976fe7",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +787,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6544cf9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -801,7 +794,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -815,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
