--- a/Week-6/Untitled1.ipynb
+++ b/Week-6/Untitled1.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "0e042734",
    "metadata": {},
    "outputs": [
     {
@@ -95,6 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "77a77a92",
    "metadata": {},
    "outputs": [
     {
@@ -177,6 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "4304a32d",
    "metadata": {},
    "outputs": [
     {
@@ -262,6 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "b9607592",
    "metadata": {},
    "outputs": [
     {
@@ -298,6 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "fa590391",
    "metadata": {},
    "outputs": [
     {
@@ -410,6 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "4f0f57b1",
    "metadata": {},
    "outputs": [
     {
@@ -444,6 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "eddb588b",
    "metadata": {},
    "outputs": [
     {
@@ -513,6 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "510ebd08",
    "metadata": {},
    "outputs": [
     {
@@ -549,6 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "56b17deb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,6 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "591ff4a0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -577,7 +587,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -591,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
