--- a/Week-10/PROJECTS.ipynb
+++ b/Week-10/PROJECTS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "7ab60382",
    "metadata": {},
    "outputs": [
@@ -10,27 +10,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number of oranges: 45\n",
-      "Your price is 1350NGN\n",
+      "Enter number of oranges: 60\n",
+      "Please we  don't offer such services \n",
+      " Please enter a lesser amount of oranges\n",
       "Thanks for shopping with us\n"
      ]
     }
    ],
    "source": [
     "class shop():\n",
+    "    # \n",
     "    stock = 50 \n",
     "    \n",
+    "    # \n",
     "    def fruit(self):\n",
     "        self.stock = stock \n",
     "\n",
-    "        \n",
+    "#        \n",
     "rodger = shop()        \n",
     "oranges = int(input(\"Enter number of oranges: \"))\n",
     "\n",
-    "if oranges > rodger.stock:\n",
+    "\n",
+    "if oranges > rodger.stock():\n",
     "    print(\"Please we  don't offer such services \\n Please enter a lesser amount of oranges\")\n",
     "    \n",
-    "elif oranges < rodger.stock:\n",
+    "elif oranges < rodger.stock():\n",
     "    price = oranges * 30\n",
     "    print(f\"Your price is {price}NGN\")\n",
     "print(\"Thanks for shopping with us\")"
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "1f5fac86",
    "metadata": {},
    "outputs": [],
@@ -140,21 +144,24 @@
     "    def lager(self):\n",
     "        lager = {\"33 Export\", \"Desperados\", \"Goldberg\",\"Gulder\",\"Heineken\",\"Star\"}\n",
     "        self.lager = lager\n",
-    "        print(lager)\n",
+    "        #print(lager)\n",
+    "        return lager\n",
     "        \n",
     "    def Stout(self):\n",
     "        stout = {\"Legend\", \"Turbo King\", \"Williams\",\"  \",\"  \",\"  \"}\n",
     "        self.stout = stout\n",
-    "        print(stout)\n",
+    "        #print(stout)\n",
+    "        return stout\n",
     "        \n",
     "    def Non_alcoholic(self):\n",
     "        nonalcoholic = {\"Maltina\", \"Amstel Malta\", \"Malta Gold\",\"Fayrouz\",\" \",\" \"}\n",
     "        self.nonalcoholic = nonalcoholic\n",
     "        print(nonalcoholic)\n",
+    "        #return nonalcoholic\n",
     "        \n",
     "\n",
     "file = Beer()\n",
-    "Drinks = {'Lager':[file.lager], 'Stout':[file.Stout], 'Non-Alcoholic':[file.Non_alcoholic]}\n",
+    "Drinks = {'Lager': [file.lager()], 'Stout': [file.Stout()], 'Non-Alcoholic': [file.Non_alcoholic()]}\n",
     "df = pd.DataFrame(Drinks)\n",
     "\n",
     "\n",
