--- a/Week-8/PROJECT/PROJECT 1&2.ipynb
+++ b/Week-8/PROJECT/PROJECT 1&2.ipynb
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Title: Manager \n",
-      "Name(Firstname Lastname): Mary Evans \n",
+      "Title: Cloud Engineer\n",
+      "Name(Firstname Lastname):  Mary \n",
       "Access Denied!\n",
       "Name Not Found\n"
      ]
@@ -62,6 +62,14 @@
     "\n",
     "a.check_employee(num, title)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41d0efae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
