--- a/Week-11/PROJECT.ipynb
+++ b/Week-11/PROJECT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "5f521548",
    "metadata": {},
    "outputs": [
@@ -10,58 +10,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    MatNo               Name  Age  Grade\n",
-      "0    1810       Aina Adeleke   16     80\n",
-      "1    1811        Sola Egbune   23     55\n",
-      "2    1812    Callistus Okeke   17     40\n",
-      "3    1813      Martin Alegbe   25     77\n",
-      "4    1814        Mary Akande   20     87\n",
-      "5    1815    Stella Olohimen   17     44\n",
-      "6    1816       Gabriel Pati   18     50\n",
-      "7    1817    Durojaiye Adamu   24     60\n",
-      "8    1818     Kolawole Alabi   18     67\n",
-      "9    1819      Tope Ogunleye   22     54\n",
-      "10   1820  Wilfred Nwachukwu   16     45\n",
-      "11   1821      Mildred James   15     70\n",
-      "12   1822     Glory Babalola   21     69\n",
-      "13   1823          Edith Ade   22     57\n",
-      "14   1824      Godwin Osahon   20     51\n",
-      "15   1825       Philip Odion   19     68\n",
-      "\n",
-      "0     16\n",
-      "1     23\n",
-      "2     17\n",
-      "3     25\n",
-      "4     20\n",
-      "5     17\n",
-      "6     18\n",
-      "7     24\n",
-      "8     18\n",
-      "9     22\n",
-      "10    16\n",
-      "11    15\n",
-      "12    21\n",
-      "13    22\n",
-      "14    20\n",
-      "15    19\n",
-      "Name: Age, dtype: int64\n",
-      "0     16\n",
-      "1     23\n",
-      "2     17\n",
-      "3     25\n",
-      "4     20\n",
-      "5     17\n",
-      "6     18\n",
-      "7     24\n",
-      "8     18\n",
-      "9     22\n",
-      "10    16\n",
-      "11    15\n",
-      "12    21\n",
-      "13    22\n",
-      "14    20\n",
-      "15    19\n",
-      "Name: Age, dtype: int64\n"
+      "What file do you wish to see \n",
+      " Press 1 for The Pirates \n",
+      " Press 2 for The Yankees \n",
+      " Press 3 for The Bulls3\n",
+      "File has been displayed\n"
      ]
     }
    ],
@@ -70,26 +23,48 @@
     "class sims():\n",
     "    \n",
     "    def pirates(self, data):      \n",
-    "        #print(data)\n",
-    "        columns = list(data)\n",
     "        for i in range(len(data.Age)):\n",
-    "            # printing the third element of the column\n",
-    "            if data.Age[i] == 16:\n",
-    "                print(data['Age'])\n",
+    "            if data.Age[i] > 14 and data.Age[i] < 18:\n",
+    "                pirates_data = [data.MatNo[i], data.Name[i], data.Age[i], data.Grade[i]]\n",
+    "                Pirates = pd.DataFrame(pirates_data)\n",
+    "                Pirates.to_csv('Pirates File.csv')\n",
     "                \n",
-    "            #for i,j in data.iterrows():\n",
+    "    def yankees(self, data):\n",
+    "        for i in range(len(data.Age)):\n",
+    "            if data.Age[i] > 18 and data.Age[i] < 22:\n",
     "            \n",
+    "                yankees_data = [data.MatNo[i], data.Name[i], data.Age[i], data.Grade[i]]\n",
+    "                Yankees = pd.DataFrame(yankees_data)\n",
+    "                Yankees.to_csv('Yankees_File.csv')\n",
+    "        \n",
+    "    def Bulls(self, data):\n",
+    "        for i in range(len(data.Age)):\n",
+    "            if data.Age[i] > 22:\n",
+    "        \n",
+    "        \n",
+    "                bulls_data = [data.MatNo[i], data.Name[i], data.Age[i], data.Grade[i]]\n",
+    "                Bulls = pd.DataFrame(bulls_data)\n",
+    "                Bulls.to_csv('Bulls File.csv')\n",
+    "\n",
     "            \n",
-    "#             if data[j] > 14 and data[j] < 18:\n",
-    "#                  print(data)\n",
-    "# #              df = pd.DataFrame(The_pirates)\n",
-    "# #              df.to_csv('The_pirates.csv')\n",
+    "\n",
     "\n",
     "data = pd.read_csv(\"sis.csv\")  \n",
-    "print(data)\n",
-    "print(\"\")\n",
-    "object = sims()\n",
-    "object.pirates(data)\n",
+    "kpomo = sims()\n",
+    "file = int(input(\"What file do you wish to see \\n Press 1 for The Pirates \\n Press 2 for The Yankees \\n Press 3 for The Bulls\"))\n",
+    "\n",
+    "if file == 1:\n",
+    "    kpomo.pirates(data)\n",
+    "    print(\"File has been displayed\")\n",
+    "elif file == 2:\n",
+    "    kpomo.yankees(data)\n",
+    "    print(\"File has been displayed\")\n",
+    "elif file == 3:\n",
+    "    kpomo.Bulls(data)\n",
+    "    print(\"File has been displayed\")\n",
+    "else:\n",
+    "    print(\"You're not welcome \")\n",
+    "\n",
     "\n",
     "        \n",
     "    "
@@ -99,6 +74,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e19eef8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b845ecb",
    "metadata": {},
    "outputs": [],
    "source": []
