--- a/Week-12/PROJECTS 1&2.ipynb
+++ b/Week-12/PROJECTS 1&2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "0bcfa340",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What club do you support:Madiba FC\n",
-      "Welcome to Madiba FC\n"
+      "What club do you support:TSG Walker\n",
+      "Welcome to TSG Walker\n"
      ]
     }
    ],
