--- a/Week-6/Week 6 - Python-Pandas-Practice.ipynb
+++ b/Week-6/Week 6 - Python-Pandas-Practice.ipynb
@@ -69,16 +69,76 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'pandas' has no attribute 'DataFram'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-a96f8283955b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# Calling DataFrame constructor on list\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFram\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlysted\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# Print the output.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(name)\u001b[0m\n\u001b[0;32m    261\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0m_SparseArray\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    262\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 263\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"module 'pandas' has no attribute '{name}'\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    264\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    265\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'DataFram'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CSC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>is</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>the</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>best</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>course</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ever</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0\n",
+       "0     CSC\n",
+       "1     102\n",
+       "2      is\n",
+       "3     the\n",
+       "4    best\n",
+       "5  course\n",
+       "6    ever"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -89,7 +149,7 @@
     "lyst = ['CSC', '102', 'is', 'the', 'best', 'course', 'ever']\n",
     " \n",
     "# Calling DataFrame constructor on list\n",
-    "df = pd.DataFram(lysted)\n",
+    "df = pd.DataFrame(lyst)\n",
     "\n",
     "# Print the output.\n",
     "df"
@@ -104,15 +164,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Angela</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Precious</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Luis</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ade</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Name  Age\n",
+       "0    Angela   20\n",
+       "1  Precious   21\n",
+       "2      Luis   19\n",
+       "3       Ade   18"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     " \n",
     "# intialise data of lists.\n",
     "data = {'Name':['Angela', 'Precious', 'Luis', 'Ade'],\n",
-    "        'Age':[20, 21, 19, 18,20]}\n",
+    "        'Age':[20, 21, 19, 18]}\n",
     " \n",
     "# Create DataFrame\n",
     "df = pd.DataFrame(data)\n",
@@ -130,9 +253,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Qualification</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Clem</td>\n",
+       "      <td>Msc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Prince</td>\n",
+       "      <td>MA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Edward</td>\n",
+       "      <td>MCA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adele</td>\n",
+       "      <td>Phd</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Name Qualification\n",
+       "0    Clem           Msc\n",
+       "1  Prince            MA\n",
+       "2  Edward           MCA\n",
+       "3   Adele           Phd"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import pandas package\n",
     "import pandas as pd\n",
@@ -144,7 +330,7 @@
     "        'Qualification':['Msc', 'MA', 'MCA', 'Phd']}\n",
     " \n",
     "# Convert the dictionary into DataFrame \n",
-    "df = pf.DataFrame(data)\n",
+    "df = pd.DataFrame(data)\n",
     " \n",
     "# select two columns\n",
     "df[['Name', 'Qualification']]\n"
@@ -161,9 +347,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name              Oyin\n",
+       "Age                 27\n",
+       "Address          Asaba\n",
+       "Qualification      Msc\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pg\n",
     " \n",
@@ -174,7 +375,7 @@
     "        'Qualification':['Msc', 'MA', 'MCA', 'Phd']}\n",
     " \n",
     "# Convert the dictionary into DataFrame \n",
-    "df = pd.Dataframe(data)\n",
+    "df = pg.DataFrame(data)\n",
     " \n",
     "# select first row\n",
     "df.iloc[0]"
@@ -189,15 +390,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Employee Names</th>\n",
+       "      <th>Years</th>\n",
+       "      <th>Assesment Records</th>\n",
+       "      <th>Points</th>\n",
+       "      <th>Reward</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Matthew Ade</td>\n",
+       "      <td>25</td>\n",
+       "      <td>125.3</td>\n",
+       "      <td>21</td>\n",
+       "      <td>438.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Angela Adebisi</td>\n",
+       "      <td>15</td>\n",
+       "      <td>77.9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>181.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Calistus Ndukwe</td>\n",
+       "      <td>10</td>\n",
+       "      <td>144.2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>432.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Martha Martins</td>\n",
+       "      <td>9</td>\n",
+       "      <td>81.5</td>\n",
+       "      <td>25</td>\n",
+       "      <td>339.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Victor Sayola</td>\n",
+       "      <td>18</td>\n",
+       "      <td>77.8</td>\n",
+       "      <td>33</td>\n",
+       "      <td>427.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Adamu Bello</td>\n",
+       "      <td>23</td>\n",
+       "      <td>99.5</td>\n",
+       "      <td>24</td>\n",
+       "      <td>398.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Employee Names  Years  Assesment Records  Points  Reward\n",
+       "0      Matthew Ade     25              125.3      21  438.55\n",
+       "1   Angela Adebisi     15               77.9      14  181.77\n",
+       "2  Calistus Ndukwe     10              144.2      18  432.60\n",
+       "3   Martha Martins      9               81.5      25  339.58\n",
+       "4    Victor Sayola     18               77.8      33  427.90\n",
+       "5      Adamu Bello     23               99.5      24  398.00"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# importing pandas package\n",
     "import pandas as pd\n",
     " \n",
     "# making data frame from csv file\n",
-    "data = pd.read_csv(\"employe_records.csv\")\n",
+    "data = pd.read_csv(\"employee_records.csv\")\n",
     "\n",
     "# print excel\n",
     "data"
@@ -212,9 +509,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Employee Names       Matthew Ade\n",
+       "Years                         25\n",
+       "Assesment Records          125.3\n",
+       "Points                        21\n",
+       "Reward                    438.55\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# importing pandas package\n",
     "import pandas as pd\n",
@@ -222,10 +535,10 @@
     "# making data frame from csv file\n",
     "data = pd.read_csv(\"employee_records.csv\")\n",
     "\n",
-    "df=datas.iloc[0]\n",
+    "df=data.iloc[0]\n",
     "\n",
     "# print excel\n",
-    "dg"
+    "df"
    ]
   },
   {
@@ -237,15 +550,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Employee Names</th>\n",
+       "      <th>Years</th>\n",
+       "      <th>Assesment Records</th>\n",
+       "      <th>Points</th>\n",
+       "      <th>Reward</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Matthew Ade</td>\n",
+       "      <td>25</td>\n",
+       "      <td>125.3</td>\n",
+       "      <td>21</td>\n",
+       "      <td>438.55</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Employee Names  Years  Assesment Records  Points  Reward\n",
+       "0    Matthew Ade     25              125.3      21  438.55"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# importing pandas package\n",
-    "import panda as pd\n",
+    "import pandas as pd\n",
     " \n",
     "# making data frame from csv file\n",
-    "data = pd.read_csv(\"bcg.cs\")\n",
+    "data = pd.read_csv(\"employee_records.csv\")\n",
     "\n",
     "df=data.head(1)\n",
     "\n",
@@ -410,7 +774,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -424,7 +788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
