--- a/Week-9/Practices.ipynb
+++ b/Week-9/Practices.ipynb
@@ -98,19 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "728557df",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'name' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[35], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroll \u001b[38;5;241m=\u001b[39m roll\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# Object Instance\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m \u001b[38;5;28mobject\u001b[39m \u001b[38;5;241m=\u001b[39m A(\u001b[43mname\u001b[49m)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;28mobject\u001b[39m\u001b[38;5;241m.\u001b[39mname)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'name' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ehi Elijah\n"
      ]
     }
    ],
@@ -119,15 +115,17 @@
     "# forget to invoke __init__() of the parent.\n",
     "\n",
     "class A:\n",
-    "    def __init__(self, name = 'Ehi Elijah'):\n",
-    "        self.name = name\n",
+    "    def __init__(self, n = 'Ehi Elijah'):\n",
+    "        self.name = n\n",
     "        \n",
     "class B(A):\n",
     "    def __init__(self, roll):\n",
     "        self.roll = roll\n",
+    "        \n",
+    "        A.__init__(self, n = 'Ehi Elijah')\n",
     "\n",
     "# Object Instance\n",
-    "object = A(name)\n",
+    "object = A('Ehi Elijah')\n",
     "print (object.name)\n"
    ]
   },
