--- a/Week-6/Untitled2.ipynb
+++ b/Week-6/Untitled2.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "8ae17443",
    "metadata": {},
    "outputs": [
     {
@@ -192,6 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "b6fa3a32",
    "metadata": {},
    "outputs": [
     {
@@ -307,6 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "d73e4f37",
    "metadata": {},
    "outputs": [
     {
@@ -445,6 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "be1a23fa",
    "metadata": {},
    "outputs": [
     {
@@ -551,6 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "174f872b",
    "metadata": {},
    "outputs": [
     {
@@ -683,6 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "86fc1006",
    "metadata": {},
    "outputs": [
     {
@@ -787,6 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d6d701e9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -794,7 +801,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -808,7 +815,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
