--- a/Week-6/Untitled3.ipynb
+++ b/Week-6/Untitled3.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "d94f9054",
    "metadata": {},
    "outputs": [
     {
@@ -116,6 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8121135a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -123,7 +125,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -137,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
