--- a/Week-8/Practices.ipynb
+++ b/Week-8/Practices.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f71506f5",
    "metadata": {},
    "outputs": [
@@ -273,20 +273,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first number: 2\n",
-      "Enter second number: 3\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'first' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 29\u001b[0m\n\u001b[0;32m     26\u001b[0m obj\u001b[38;5;241m.\u001b[39mcalculate()\n\u001b[0;32m     28\u001b[0m \u001b[38;5;66;03m# display result\u001b[39;00m\n\u001b[1;32m---> 29\u001b[0m \u001b[43mobj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdisplay\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[2], line 12\u001b[0m, in \u001b[0;36mAddition.display\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdisplay\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFirst number = \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[43mfirst\u001b[49m))\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSecond number = \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msecond))\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAddition of two numbers = \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39manswer))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'first' is not defined"
+      "Enter first number: 3\n",
+      "Enter second number: 4\n",
+      "First number = 3\n",
+      "Second number = 4\n",
+      "Addition of two numbers = 7\n"
      ]
     }
    ],
