--- a/Week-9/Week 9 - Inheritance and Polymorphism Practice.ipynb
+++ b/Week-9/Week 9 - Inheritance and Polymorphism Practice.ipynb
@@ -77,9 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Basit Inaolaji\n",
+      "ID No.: 886012\n",
+      "Salary: 200000\n"
+     ]
+    }
+   ],
    "source": [
     "# Python code to demonstrate how parent constructors\n",
     "# are called.\n",
@@ -99,12 +109,12 @@
     "\n",
     "# child class\n",
     "class Employee(Person):\n",
-    "    def __init__(self, name, idnumber, salary, post, age):\n",
+    "    def __init__(self, name, idnumber, salary, post):\n",
     "        self.salary = salary\n",
     "        self.post = post\n",
     "\n",
     "        # invoking the __init__ of the parent class\n",
-    "        Person.__init__(self)\n",
+    "        Person.__init__(self,name,idnumber)\n",
     "\n",
     "                \n",
     "# creation of an object variable or an instance\n",
@@ -235,9 +245,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oluwafemi\n",
+      "Grandfather name : Oluwafemi\n",
+      "Father name : Abiodun\n",
+      "Son name : Gbenga\n"
+     ]
+    }
+   ],
    "source": [
     "# Python program to demonstrate\n",
     "# multilevel inheritance\n",
@@ -245,11 +266,11 @@
     "# Base class\n",
     "class Grandfather:\n",
     "\n",
-    "    def __init(self, grandfathername):\n",
+    "    def __init__(self, grandfathername):\n",
     "        self.grandfathername = grandfathername\n",
     "\n",
     "# Intermediate class\n",
-    "class Father(GrandFather):\n",
+    "class Father(Grandfather):\n",
     "    def __init__(self, fathername, grandfathername):\n",
     "        self.fathername = fathername\n",
     "\n",
@@ -257,12 +278,12 @@
     "        Grandfather.__init__(self, grandfathername)\n",
     "\n",
     "# Derived class\n",
-    "class Son(father):\n",
+    "class Son(Father):\n",
     "    def __init__(self,sonname, fathername, grandfathername):\n",
-    "        self.sonname = soname\n",
+    "        self.sonname = sonname\n",
     "\n",
     "        # invoking constructor of Father class\n",
-    "        Father.init(self, fathername, grandfathername)\n",
+    "        Father.__init__(self, fathername, grandfathername)\n",
     "\n",
     "    def print_name(self):\n",
     "        print('Grandfather name :', self.grandfathername)\n",
@@ -270,7 +291,7 @@
     "        print(\"Son name :\", self.sonname)\n",
     "\n",
     "# Object Instance\n",
-    "s1 = Son('Gbenga', 'Abiodun', 'Oluwafemi', 'Adeoke')\n",
+    "s1 = Son('Gbenga', 'Abiodun', 'Oluwafemi')\n",
     "print(s1.grandfathername)\n",
     "s1.print_name()\n"
    ]
@@ -285,9 +306,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This function is in parent class.\n",
+      "This function is in child 1.\n",
+      "This function is in parent class.\n",
+      "This function is in child 2.\n"
+     ]
+    }
+   ],
    "source": [
     "# Python program to demonstrate\n",
     "# Hierarchical inheritance\n",
@@ -299,22 +331,22 @@
     "        print(\"This function is in parent class.\")\n",
     "\n",
     "# Derived class1\n",
-    "class Child1(Parents):\n",
+    "class Child1(Parent):\n",
     "    def func2(self):\n",
     "        print(\"This function is in child 1.\")\n",
     "\n",
     "# Derivied class2\n",
-    "class Child2(Parents):\n",
+    "class Child2(Parent):\n",
     "    def func3(self):\n",
     "        print(\"This function is in child 2.\")\n",
     "\n",
     "# Object Instantiation\n",
     "object1 = Child1()\n",
-    "object2 = Child3()\n",
-    "object1_.func1()\n",
-    "object1.func2_()\n",
-    "object2_.func1()\n",
-    "object2.func3_()\n"
+    "object2 = Child2()\n",
+    "object1.func1()\n",
+    "object1.func2()\n",
+    "object2.func1()\n",
+    "object2.func3()\n"
    ]
   },
   {
@@ -327,9 +359,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (559847339.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[27], line 6\u001b[1;36m\u001b[0m\n\u001b[1;33m    Def func1(self):\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Python program to demonstrate\n",
     "# hybrid inheritance\n",
@@ -381,14 +422,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# Python program to demonstrate in-built polymorphic functions\n",
     "\n",
     "# len() being used for a string\n",
-    "print(len(\"Department of Computer Science\", 20))\n",
+    "print(len(\"Department of Computer Science\"))\n",
     "\n",
     "# len() being used for a list\n",
     "print(len([10, 20, 30, 40, 50, 60, 70]))\n"
@@ -403,9 +453,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# A simple Python function to demonstrate\n",
     "# Polymorphism\n",
@@ -414,9 +474,9 @@
     "    return x + y + z \n",
     "\n",
     "# Driver code\n",
-    "print(adding(2, 3))\n",
-    "print(added(2, 3, 4))\n",
-    "print(adds(2, 3, 5, 6))\n"
+    "print(add(2, 3))\n",
+    "print(add(2, 3, 4))\n",
+    "print(add(2, 3, 5, 6))\n"
    ]
   },
   {
@@ -429,9 +489,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lagos is the capital of Nigeria.\n",
+      "English is the official language of Nigeria.\n",
+      "Nigeria is the giant of Africa.\n",
+      "Lome is the capital of Togo.\n",
+      "French is the primary language of Togo.\n",
+      "Togo is known for its palm-lined beaches and hilltop villages.\n"
+     ]
+    }
+   ],
    "source": [
     "class Nigeria():\n",
     "    def capital(self):\n",
@@ -440,24 +513,24 @@
     "    def language(self):\n",
     "        print(\"English is the official language of Nigeria.\")\n",
     "\n",
-    "    def type(self):\n",
+    "    def Type(self):\n",
     "        print(\"Nigeria is the giant of Africa.\")\n",
     "\n",
-    "class Togo():\n",
+    "class Togo(Nigeria):\n",
     "    def capital(self):\n",
     "        print(\"Lome is the capital of Togo.\")\n",
     "\n",
     "    def language(self):\n",
     "        print(\"French is the primary language of Togo.\")\n",
     "\n",
-    "    def type(self):\n",
+    "    def Type(self):\n",
     "        print(\"Togo is known for its palm-lined beaches and hilltop villages.\")\n",
     "\n",
     "obj_naija = Nigeria()\n",
     "obj_togo = Togo()\n",
-    "for country in (obj_naij, obj_togo):\n",
-    "    country.Capital()\n",
-    "    country.languages()\n",
+    "for country in (obj_naija, obj_togo):\n",
+    "    country.capital()\n",
+    "    country.language()\n",
     "    country.Type()\n"
    ]
   },
@@ -471,9 +544,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are many types of birds.\n",
+      "Most of the birds can fly but some cannot.\n",
+      "There are many types of birds.\n",
+      "Sparrows can fly.\n",
+      "There are many types of birds.\n",
+      "Ostriches cannot fly.\n"
+     ]
+    }
+   ],
    "source": [
     "class Bird:\n",
     "    def intro(self):\n",
@@ -490,18 +576,18 @@
     "    def flight(selfie):\n",
     "        print(\"Ostriches cannot fly.\")\n",
     "\n",
-    "obj_bird = Birds()\n",
-    "obj_spr = Sparrow()\n",
-    "obj_ost = Ostrich()\n",
+    "obj_bird = Bird()\n",
+    "obj_spr = sparrow()\n",
+    "obj_ost = ostrich()\n",
     "\n",
     "obj_bird.intro()\n",
-    "obj_bird.flihgt()\n",
+    "obj_bird.flight()\n",
     "\n",
     "obj_spr.intro()\n",
-    "obj_spr.flights()\n",
+    "obj_spr.flight()\n",
     "\n",
     "obj_ost.intro()\n",
-    "obj_ost.Flight()\n"
+    "obj_ost.flight()\n"
    ]
   },
   {
